# Inhouse-Fin-Flow

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/Scripts/: seed.py
app/core/: cloudinary_service.py  config.py  database.py  dependencies.py  email.py  exceptions.py  logging.py  middleware.py  security.py  trash_store.py
app/modules/auth/: router.py  schema.py  service.py
app/modules/card_sharing/: router.py  schema.py  service.py
app/modules/daily_rate/: router.py  schema.py  service.py
app/modules/dashboard/: router.py  service.py
app/modules/dollar_exchange/: router.py  schema.py  service.py
app/modules/export/: router.py  schema.py  service.py
app/modules/fiverr/: router.py  schema.py  service.py
app/modules/health/: router.py
app/modules/hr_expense/: router.py  schema.py  service.py
app/modules/inventory/: router.py  schema.py  service.py
app/modules/invitations/: router.py  schema.py  service.py
app/modules/outside_orders/: router.py  schema.py  service.py
app/modules/payoneer/: router.py  schema.py  service.py
app/modules/pmak/: router.py  schema.py  service.py
app/modules/role_matrix/: __init__.py  constants.py  router.py  schema.py  service.py
app/modules/upwork/: router.py  schema.py  service.py
app/modules/users/: router.py  schema.py  service.py
app/shared/: constants.py  filters.py  pagination.py
data/: trash_store.json
prisma/: schema.prisma
prisma/migrations/20260228031829_init/: migration.sql
(+12 files in other folders)
