[tool.poetry]
name = "maktech-finflow"
version = "1.0.0"
description = "MAKTech Financial Flow - Enterprise Finance Management API"
authors = ["MAKTech <admin@maktech.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
prisma = "^0.14.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.3.0"
PyJWT = {extras = ["crypto"], version = "^2.11.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "3.2.2"
python-multipart = "^0.0.9"
openpyxl = "^3.1.4"
aiosmtplib = "^3.0.1"
jinja2 = "^3.1.4"
cryptography = "^42.0.8"
python-dateutil = "^2.9.0"
cloudinary = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
black = "^24.4.2"
ruff = "^0.5.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"